# lukan

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-entrypoint.sh  install.sh  registry.toml
.github/workflows/: ci-desktop.yml  ci.yml  release.yml
crates/lukan-agent/: Cargo.toml
crates/lukan-agent/src/: agent_loop.rs  git_worktree_roots.rs  lib.rs  memory_helpers.rs  message_history.rs  permission_matcher.rs  session_manager.rs  sub_agent.rs  subagent_worktree_tools.rs  subagent_worktrees.rs  (+2 more)
crates/lukan-browser/: Cargo.toml
crates/lukan-browser/src/: ax_tree.rs  cdp_client.rs  chrome_launcher.rs  lib.rs  url_guard.rs
crates/lukan-core/: Cargo.toml
crates/lukan-core/src/: approvals.rs  crypto.rs  errors.rs  lib.rs  relay.rs
crates/lukan-core/src/config/: config_manager.rs  credentials.rs  mod.rs  paths.rs  project_config.rs  types.rs
crates/lukan-core/src/models/: checkpoints.rs  events.rs  messages.rs  mod.rs  plugin.rs  sessions.rs  tools.rs
crates/lukan-core/src/pipelines/: manager.rs  mod.rs  types.rs
crates/lukan-core/src/workers/: manager.rs  mod.rs  schedule.rs  types.rs
crates/lukan-desktop/: Cargo.toml  tauri.conf.json
crates/lukan-desktop/capabilities/: default.json
crates/lukan-desktop/icons/: icon.icns
crates/lukan-desktop/src/: main.rs  state.rs  terminal_state.rs
crates/lukan-desktop/src/commands/: audio.rs  bg_processes.rs  browser.rs  chat.rs  config.rs  credentials.rs  events.rs  files.rs  memory.rs  mod.rs  plugins.rs  providers.rs  terminal.rs  workers.rs
crates/lukan-plugins/: Cargo.toml
crates/lukan-plugins/src/: channel.rs  lib.rs  manager.rs  process.rs  registry.rs
crates/lukan-providers/: Cargo.toml
crates/lukan-providers/src/: anthropic.rs  codex_auth.rs  contracts.rs  copilot_auth.rs  copilot_token.rs  fireworks.rs  gemini.rs  github_copilot.rs  lib.rs  lukan_cloud.rs  nebius.rs  ollama_cloud.rs  openai_codex.rs  openai_compat.rs  schema_adapter.rs  sse.rs  think_tag_parser.rs
crates/lukan-relay/: Cargo.toml
crates/lukan-relay/src/: auth.rs  main.rs  rest_tunnel.rs  state.rs  static_files.rs  ws_client.rs  ws_daemon.rs
crates/lukan-search/: Cargo.toml
crates/lukan-tools/: Cargo.toml
crates/lukan-tools/src/: bash.rs  bg_processes.rs  edit_file.rs  glob_tool.rs  google_auth.rs  google_workspace.rs  grep.rs  lib.rs  mcp.rs  mcp_tools.rs  planner_tools.rs  plugin_tools.rs  read_file.rs  remember.rs  reranker.rs  sandbox.rs  skills.rs  tasks.rs  tool_search.rs  web_fetch.rs  web_search.rs  write_file.rs
crates/lukan-tools/src/browser/: click.rs  evaluate.rs  mod.rs  navigate.rs  new_tab.rs  save_pdf.rs  screenshot.rs  snapshot.rs  switch_tab.rs  tabs.rs  type_text.rs
crates/lukan-tools/tests/: bash.rs  deferred_sources.rs  edit_file.rs  glob_tool.rs  read_file.rs  sandbox.rs  test_helpers.rs  tool_registry.rs  tool_search.rs  web_fetch.rs  write_file.rs
crates/lukan-tui/: Cargo.toml
crates/lukan-tui/src/: app.rs  event.rs  lib.rs  terminal_modal.rs  ws_client.rs
crates/lukan-tui/src/app/: event_agent.rs  helpers.rs  keys.rs  mod.rs  model.rs  render.rs  session.rs  stream.rs  submit.rs
crates/lukan-tui/src/widgets/: approval_prompt.rs  bg_picker.rs  chat.rs  command_palette.rs  event_picker.rs  input.rs  markdown.rs  mod.rs  model_palette.rs  plan_review.rs  planner_question.rs  reasoning_palette.rs  rewind_picker.rs  session_picker.rs  shimmer.rs  status_bar.rs  subagent_picker.rs  task_panel.rs  terminal.rs  tool_picker.rs  trust_prompt.rs  worker_picker.rs
crates/lukan-web/: Cargo.toml  build.rs
crates/lukan-web/src/: auth.rs  auth_middleware.rs  embedded_ui.rs  lib.rs  protocol.rs  rest_auto.rs  rest_browser.rs  rest_config.rs  rest_credentials.rs  rest_events.rs  rest_files.rs  rest_memory.rs  rest_pipelines.rs  rest_plugins.rs  rest_processes.rs  rest_providers.rs  rest_workers.rs  server.rs  state.rs  static_files.rs  terminal.rs  ws_handler.rs
desktop-client/: index.html  package.json  vite.config.ts
desktop-client/src/: App.tsx  main.tsx
examples/echo-plugin/: README.md  echo-bridge.sh  plugin.toml
examples/google-workspace-plugin/: cli.js  package.json  prompt.txt  tools.json
examples/whatsapp-plugin/: bridge.js  cli.js  package.json  plugin.toml
plugins/discord/: bridge.js  package.json  plugin.toml  prompt.txt
plugins/docker-monitor/: monitor.sh  plugin.toml
plugins/email/: bridge.js  cli.js  package-lock.json  package.json  plugin.toml  prompt.txt  tools.js  tools.json
plugins/github/: bridge.js  package.json  plugin.toml
plugins/gmail/: cli.js  package.json  plugin.toml  prompt.txt  tools.js  tools.json
plugins/google-workspace/: cli.js  plugin.toml  prompt.txt  tools.js  tools.json
plugins/nano-banana-pro/: plugin.toml  tools.json  tools.py
plugins/security-monitor/: monitor.sh  plugin.toml
plugins/slack/: bridge.js  package.json  plugin.toml  prompt-dir-allowed.txt  prompt-dir-none.txt  prompt.txt
plugins/telegram/: bridge.js  package.json  plugin.toml  prompt.txt  tools.js  tools.json
plugins/whatsapp/: bridge.js  cli.js  config.json  package-lock.json  plugin.toml  prompt-dir-allowed.txt  prompt-dir-none.txt  prompt.txt  tools.js  tools.json
plugins/whisper/: .gitignore  Cargo.toml  build.rs  plugin.toml  shim.c
plugins/whisper/src/: ffi.rs  main.rs  model.rs  server.rs  transcribe.rs
prompts/: base.txt  behavior_memory_update.txt  compaction-simple.txt  compaction-with-memory.txt  compaction.txt  event-agent.txt  google-workspace.txt  memory_update.txt  planner.txt  structured_memory_update.txt  task-tracking.txt  whatsapp-dir-allowed.txt  whatsapp-dir-none.txt  whatsapp-format.txt
scripts/: bundle-plugins.sh  embed-web.ts
src/: auto.rs  daemon.rs  login.rs  main.rs  models.rs  plugin.rs  plugin_config.rs  plugin_exec.rs  relay_bridge.rs  sandbox_cmd.rs  session_worktree.rs  setup.rs  skills.rs  update.rs  whatsapp.rs  whatsapp_compat.rs  worker.rs
web-client/: package.json  tsconfig.json  vite.config.ts
web-client/src/: App.tsx  index.html  main.tsx
(+123 files in other folders)
