[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Errors
anyhow = "1"
thiserror = "2"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Markdown & syntax
pulldown-cmark = "0.12"
syntect = "5"

# Tools
similar = "2"
globset = "0.4"
walkdir = "2"
regex = "1"

# Symbol index
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"

# Web server
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# CLI & utilities
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
rand = "0.9"
base64 = "0.22"
url = "2"
tokio-tungstenite = { version = "0.26", features = ["connect", "native-tls"] }
libc = "0.2"
sha2 = "0.10"
open = "5"
urlencoding = "2"
toml = "0.8"

# Tauri (desktop UI)
tauri = { version = "2", features = [] }
tauri-build = "2"

# Workspace crates
lukan-core = { path = "crates/lukan-core" }
lukan-providers = { path = "crates/lukan-providers" }
lukan-tools = { path = "crates/lukan-tools" }
lukan-search = { path = "crates/lukan-search" }
lukan-agent = { path = "crates/lukan-agent" }
lukan-tui = { path = "crates/lukan-tui" }
lukan-web = { path = "crates/lukan-web" }
lukan-plugins = { path = "crates/lukan-plugins" }
lukan-desktop = { path = "crates/lukan-desktop" }

[package]
name = "lukan"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lukan"
path = "src/main.rs"

[dependencies]
lukan-core.workspace = true
lukan-tui.workspace = true
lukan-providers.workspace = true
lukan-agent.workspace = true
lukan-tools.workspace = true
lukan-web.workspace = true
lukan-plugins.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dotenvy.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
regex.workspace = true
futures.workspace = true
libc.workspace = true
chrono.workspace = true
dialoguer = "0.11"
console = "0.15"
