[package]
name = "lukan-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
tokio = { workspace = true, features = ["fs"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
