[package]
name = "lukan-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
tokio = { workspace = true, features = ["fs"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
rand.workspace = true
base64.workspace = true
sha2.workspace = true
x25519-dalek.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
