[package]
name = "lukan-desktop"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lukan-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
lukan-core.workspace = true
lukan-plugins.workspace = true
lukan-providers.workspace = true
lukan-agent.workspace = true
lukan-tools.workspace = true
lukan-browser.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
anyhow.workspace = true
chrono.workspace = true
portable-pty.workspace = true
uuid.workspace = true
base64.workspace = true
