[package]
name = "lukan-providers"
version.workspace = true
edition.workspace = true

[dependencies]
lukan-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
