[package]
name = "lukan-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lukan-core.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
globset.workspace = true
walkdir.workspace = true
similar.workspace = true
regex.workspace = true
ignore.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
grep-matcher.workspace = true
reqwest.workspace = true
dirs.workspace = true
url.workspace = true
futures.workspace = true
chrono.workspace = true
libc.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
open.workspace = true
urlencoding.workspace = true
toml.workspace = true
tokio-util.workspace = true
lukan-browser.workspace = true
