[package]
name = "lukan-tui"
version.workspace = true
edition.workspace = true

[dependencies]
lukan-core.workspace = true
lukan-providers.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
unicode-width = "0.2"
