[package]
name = "lukan-tui"
version.workspace = true
edition.workspace = true

[dependencies]
lukan-core.workspace = true
lukan-providers.workspace = true
lukan-agent.workspace = true
lukan-tools.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
chrono.workspace = true
unicode-width = "0.2"
pulldown-cmark.workspace = true
syntect.workspace = true
similar.workspace = true
tokio-util.workspace = true
libc.workspace = true
portable-pty.workspace = true
