[package]
name = "lukan-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lukan-core.workspace = true
lukan-agent.workspace = true
lukan-providers.workspace = true
lukan-tools.workspace = true
lukan-plugins.workspace = true
lukan-browser.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
open.workspace = true
reqwest.workspace = true
libc.workspace = true
uuid.workspace = true
portable-pty.workspace = true
rust-embed.workspace = true
mime_guess = "2"
toml.workspace = true
