[package]
name = "lukan-whisper"
version = "0.1.0"
edition = "2021"
description = "Local audio transcription plugin for lukan using whisper.cpp"

[[bin]]
name = "lukan-whisper"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
anyhow = "1"

[build-dependencies]
cmake = "0.1"
cc = "1"

[workspace]
